--- a/index.html
+++ b/index.html
@@ -1,47 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap Quiz</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./CSS/styles.css" />
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="text-center">Bootstrap Quiz</h1>
-          <h2>Objectives</h2>
-          <ol>
-            <li>Center the Bootstrap Quiz Header</li>
-            <li>Change the background color to Slate Gray</li>
-            <li>
-              Create a new row and create 3 column 4s with a card in each column
-              and make the cards evenly spaced
-            </li>
-            <li>Add a different image to each card and add lorem ipsum to each card</li>
-            <li>
-              Create a paragraph of lorem ipsum and change the font to a Google
-              Font of your liking
-            </li>
-            <li>Add a button and use WickedCss to make the button spin</li>
-          </ol>
-        </div>
-      </div>
 
-      <!-- Code goes here -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bootstrap Quiz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./CSS/styles.css"/>
+  <link rel="stylesheet" href="./CSS/wickedcss.min.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Bootstrap Quiz</h1>
+        <h2>Objectives</h2>
+        <ol>
+          <li>Center the Bootstrap Quiz Header</li>
+          <li>Change the background color to Slate Gray</li>
+          <li>
+            Create a new row and create 3 column 4s with a card in each column
+            and make the cards evenly spaced
+          </li>
+          <li>Add a different image to each card and add lorem ipsum to each card</li>
+          <li>
+            Create a paragraph of lorem ipsum and change the font to a Google
+            Font of your liking
+          </li>
+          <li>Add a button and use WickedCss to make the button spin</li>
+        </ol>
+      </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <!-- Code goes here -->
+    <div class="row">
+      <div class="col-4 d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/wallpaper-sketch.png" class="card-img-top" alt="A battleship sketch">
+          <div class="card-body">
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum omnis sequi aut enim
+              assumenda dignissimos architecto quidem ab, suscipit ex, aliquam obcaecati odit debitis. Assumenda
+              voluptate ut quia sint. Expedita!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/wallpaper-1.png" class="card-img-top" alt="A battleship in daylight">
+          <div class="card-body">
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum omnis sequi aut enim
+              assumenda dignissimos architecto quidem ab, suscipit ex, aliquam obcaecati odit debitis. Assumenda
+              voluptate ut quia sint. Expedita!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/wallpaper-2-dark.png" class="card-img-top" alt="A battleship during nighttime">
+          <div class="card-body">
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum omnis sequi aut enim
+              assumenda dignissimos architecto quidem ab, suscipit ex, aliquam obcaecati odit debitis. Assumenda
+              voluptate ut quia sint. Expedita!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+    <p class="pFont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quis vel aliquam? Numquam, sunt. Doloribus
+      dolores ipsum labore perspiciatis quisquam consequuntur culpa numquam placeat ex. At minima optio alias eligendi.
+    </p>
+
+    <br>
+    <br>
+
+    <button class="spinner"><a href="#">Hello there</a></button>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
